WIP: add hbar, vbar and bignums

--- a/server/drivers/Makefile.am
+++ b/server/drivers/Makefile.am
@@ -60,6 +60,7 @@ irman_LDADD =        @LIBIRMAN@
 jw002_LDADD =        libLCD.a libbignum.a
 lb216_LDADD =        libLCD.a
 lcterm_LDADD =       libLCD.a libbignum.a
+linux_devlcd_LDADD = libLCD.a libbignum.a
 lirc_LDADD =         @LIBLIRC_CLIENT@
 lis_LDADD =          libLCD.a @LIBFTDI_LIBS@ @LIBPTHREAD_LIBS@ libbignum.a
 mdm166a_LDADD =      @LIBHID_LIBS@ libLCD.a
@@ -112,7 +113,7 @@ jw002_SOURCES =      lcd.h lcd_lib.h jw002.c jw002.h adv_bignum.h
 lb216_SOURCES =      lcd.h lcd_lib.h lb216.c lb216.h
 lcdm001_SOURCES =    lcd.h lcdm001.c lcdm001.h
 lcterm_SOURCES =     lcd.h lcd_lib.h lcterm.c lcterm.h
-linux_devlcd_SOURCES = lcd.h linux_devlcd.h linux_devlcd.c
+linux_devlcd_SOURCES = lcd.h lcd_lib.h linux_devlcd.h linux_devlcd.c
 linux_input_SOURCES = lcd.h linux_input.h linux_input.c
 lirc_SOURCES =       lcd.h lircin.c lircin.h
 lis_SOURCES =        lcd.h lcd_lib.h lis.h lis.c
